--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+@import "fonts";
+
+:root{
+    --dark-color: #000000;
+    --light-color: #FFFFFF;
+    --primary-color: #AE7AFF;
+}
+
+*,
+*:before,
+*:after{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family: Geologica;
+    background: var(--dark-color);
+    color: var(--light-color);
+    background-image: url(/assets/images/background.jpg);
+}
+
+.skill-tag{
+    padding: 0 8px;
+    border-radius: 4px;
+    border: 1px solid var(--light-color);
+    display: inline;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 24px;
+    height: 24px;
+}
+
+.btn{
+    border: none;
+    background: var(--primary-color);
+    color: var(--dark-color);
+    padding: 10px 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.h1{
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 800;
+}
+
+.h6{
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 800;
+}
+
+.subtitle{
+    font-style: 14px;
+    line-height: 20px;
+}
