--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -7,7 +7,7 @@
     </label>
 
     <label for="">
-        Username
+        Password
         <input type="text" placeholder="login">
     </label>
 
