--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 @import "fonts";
+@import "margin";
 
 :root{
     --dark-color: #000000;
     --light-color: #FFFFFF;
     --primary-color: #AE7AFF;
+    --gray-color: #5F646D;
+    --green-color: #4fe23c;
 }
 
 *,
@@ -33,6 +36,7 @@ body{
 }
 
 .btn{
+    width: 100%;
     border: none;
     background: var(--primary-color);
     color: var(--dark-color);
@@ -40,6 +44,26 @@ body{
     font-weight: 700;
     font-size: 14px;
     line-height: 24px;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid var(--dark-color);
+}
+
+.btn-shadow{
+    position: relative;
+
+    &:before{
+        content: '';
+        position: absolute;
+        z-index: -1;
+        bottom: -4px;
+        right: -4px;
+        background: var(--gray-color);
+        width: 100%;
+        height: 100%;
+        border-radius: 4px;
+
+    }
 }
 
 .h1{
@@ -57,4 +81,26 @@ body{
 .subtitle{
     font-style: 14px;
     line-height: 20px;
+}
+
+.tt-control-label{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    display: block;
+}
+
+.tt-input{
+    width: 100%;
+    margin-top: 8px;
+    display: block;
+    border: 1px solid var(--light-color);
+    border-radius: 4px;
+    padding: 12px 20px;
+    background: var(--dark-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    font-family: Geologica;
+    color: var(--light-color);
 }
