--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,33 @@
-
-<div class="character-list">
+<div class="characters-list">
     <div *ngFor="let profile of characters">
-    <div class="character-card" routerLink='/character-detail/{{profile.id}}'>
-        <h1>{{profile.name}}</h1>
-        <img 
-            [src]="profile.image"
-            class="character-card-avatar"
-        >
-        <h3>{{profile.status}}</h3>
-        <h3>{{profile.location.name}}</h3>
+        <div class="characters-card " routerLink='/character-detail/{{profile.id}}'>
+            <h1 class="">{{profile.name}}</h1>
+            <img 
+                [src]="profile.image"
+                class="characters-card-avatar"
+            >
+            <h3>Status: {{profile.status}}</h3>
+            <h3>Location: {{profile.location.name}}</h3>
+        </div>
     </div>
 </div>
-</div>
 
+<!-- <div class="container character-list">
+    <mat-card *ngFor="let profile of characters">
+        <div class="character-card">
+            <mat-card-title>{{profile.name}}</mat-card-title>
+        <img 
+                [src]="profile.image"
+                class="character-card-avatar"
+        >
+        <mat-card-content>
+            <h3>Status: {{profile.status}}</h3>
+            <h3>Location: {{profile.location.name}}</h3>
+        </mat-card-content>
+        </div>
+        
+    </mat-card>
+</div> -->
 
 <div
     infiniteScroll
