--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,26 +1,25 @@
-.character-card{
+.characters-card{
     border: 1px solid var(--light-color);
     border-radius: 10px;
     margin-top: 10px;
     padding: 20px;
-    
 }
 
-.character-card:hover{
+.characters-card:hover{
     cursor: pointer;
     background: rgba(0, 0, 0, 0.459);
 }
 
-.character-card-avatar{
+.characters-card-avatar{
     width: 100px;
     height: 100px;
     border-radius: 10%;
     overflow: hidden;
 }
 
-.character-list{
+.characters-list{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    gap: 20px;
     padding: 10px;
 }
