Search and filter added

--- a/src/app/common-ui/navibar/navibar.component.html
+++ b/src/app/common-ui/navibar/navibar.component.html
@@ -1,4 +1,4 @@
-<div class="navibar">
-    <h2><a href="/">Main</a></h2>
+<div class="navibar mb16">
+    <h2 class="ml20"><a href="/">Home</a></h2>
 </div>
 <router-outlet></router-outlet>
