--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,31 +1,41 @@
 @font-face {
     font-display: swap;
-    font-family: 'Geologica';
+    font-family: 'Geologica-Thin';
     font-style: normal;
-    font-weight: 400;
-    src: url('/assets/fonts/Geologica-Medium.ttf');
+    src: url('/assets/fonts/Geologica-Thin.ttf');
 }
 
 @font-face {
     font-display: swap;
-    font-family: 'Geologica';
+    font-family: 'Geologica-ExtraLight';
     font-style: normal;
-    font-weight: 500;
+    src: url('/assets/fonts/Geologica-ExtraLight.ttf');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Geologica-Light';
+    font-style: normal;
+    src: url('/assets/fonts/Geologica-Light.ttf');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Geologica-Reg';
+    font-style: normal;
     src: url('/assets/fonts/Geologica-Regular.ttf');
 }
 
 @font-face {
     font-display: swap;
-    font-family: 'Geologica';
+    font-family: 'Geologica-Med';
     font-style: normal;
-    font-weight: 700;
     src: url('/assets/fonts/Geologica-Medium.ttf');
 }
 
 @font-face {
     font-display: swap;
-    font-family: 'Geologica';
+    font-family: 'Geologica-SemiBold';
     font-style: normal;
-    font-weight: 800;
     src: url('/assets/fonts/Geologica-SemiBold.ttf');
 }
