--- a/src/margin.scss
+++ b/src/margin.scss
@@ -1,3 +1,7 @@
+.mb10{
+    margin-bottom: 10px;
+}
+
 .mb16{
     margin-bottom: 16px;
 }
@@ -8,4 +12,16 @@
 
 .mb60{
     margin-bottom: 60px;
+}
+
+.mt5{
+    margin-top: 5px;
+}
+
+.mt32{
+    margin-top: 32px;
+}
+
+.ml20{
+    margin-left: 20px;
 }
