--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
     --light-color: #FFFFFF;
     --primary-color: #AE7AFF;
     --gray-color: #5F646D;
-    --green-color: #4fe23c;
+    --dark-gray-color: rgb(31,35,39);
 }
 
 *,
@@ -19,94 +19,17 @@
 }
 
 body{
-    font-family: Geologica;
+    font-family: Geologica-Reg;
     background: var(--dark-color);
     color: var(--light-color);
     background-image: url(/assets/images/background.jpg);
-    //background-color: var(--green-color);
+    background-attachment:fixed;
 }
 
-.skill-tag{
-    padding: 0 8px;
-    border-radius: 4px;
-    border: 1px solid var(--light-color);
-    display: inline;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 24px;
-    height: 24px;
+h3{
+    font-family: Geologica-ExtraLight;
 }
 
-.btn{
-    width: 100%;
-    border: none;
-    background: var(--primary-color);
-    color: var(--dark-color);
-    padding: 10px 20px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 24px;
-    cursor: pointer;
-    border-radius: 4px;
-    border: 1px solid var(--dark-color);
+h4{
+    font-family: Geologica-Thin;
 }
-
-.btn-shadow{
-    position: relative;
-
-    &:before{
-        content: '';
-        position: absolute;
-        z-index: -1;
-        bottom: -4px;
-        right: -4px;
-        background: var(--gray-color);
-        width: 100%;
-        height: 100%;
-        border-radius: 4px;
-
-    }
-}
-
-.h1{
-    font-size: 48px;
-    line-height: 56px;
-    font-weight: 800;
-}
-
-.h6{
-    font-size: 18px;
-    line-height: 24px;
-    font-weight: 800;
-}
-
-.subtitle{
-    font-style: 14px;
-    line-height: 20px;
-}
-
-.tt-control-label{
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 16px;
-    display: block;
-}
-
-.tt-input{
-    width: 100%;
-    margin-top: 8px;
-    display: block;
-    border: 1px solid var(--light-color);
-    border-radius: 4px;
-    padding: 12px 20px;
-    background: var(--dark-color);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
-    font-family: Geologica;
-    color: var(--light-color);
-}
-/* Importing Bootstrap SCSS file. */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
