--- a/src/app/pages/character-detail/character-detail.component.html
+++ b/src/app/pages/character-detail/character-detail.component.html
@@ -7,7 +7,6 @@
                 class="one-character-card-avatar mb16"
             >
             <div class="character-description">
-                <h3>Status: {{character.status}}</h3>
                 <div class="gen">
                     <h3>Gender: {{character.gender}}</h3>
                     @if(character.gender == 'Male'){
@@ -20,9 +19,10 @@
                         <img class="gender-img ml10"  src="/assets/svg/unknown.svg">
                     }
                 </div>
+                <h3>Status: {{character.status}}</h3>
                 <h3>Species: {{character.species}}</h3>
                 <h3>Origin universe: {{character.origin.name}}</h3>
-                <h3>Location: {{character.location.name}}</h3>
+                <h3>Last known location: {{character.location.name}}</h3>
             </div>
             
         </div>
