--- a/src/margin.scss
+++ b/src/margin.scss
@@ -6,6 +6,10 @@
     margin-bottom: 16px;
 }
 
+.mb20{
+    margin-bottom: 20px;
+}
+
 .mb32{
     margin-bottom: 32px;
 }
@@ -16,6 +20,10 @@
 
 .mt5{
     margin-top: 5px;
+}
+
+.mt20{
+    margin-top: 20px;
 }
 
 .mt32{
