--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     margin-top: 10px;
     padding: 20px;
+    width: 100%;
     backdrop-filter: blur(25px);
 }
 
@@ -21,7 +22,7 @@
 
 .characters-list{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     padding: 10px;
 }
@@ -29,15 +30,16 @@
 .search-bar{
     border-radius: 10px;
     border: none;
-    padding: 12px;
-    margin: 20px;
+    padding: 15px;
     font-size: 15px;
     font-family: Geologica-Reg;
 }
 
 .filter{
-    display: flex;
+    display: grid;
     align-items: flex-end;
+    vertical-align: bottom;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 .select-form{
