--- a/src/app/common-ui/navibar/navibar.component.html
+++ b/src/app/common-ui/navibar/navibar.component.html
@@ -1,4 +1,4 @@
 <div class="navibar mb16">
-    <h2 class="ml20"><a href="/">Home</a></h2>
+    <h3 class="h3 ml20"><a href="/">Home</a></h3>
 </div>
 <router-outlet></router-outlet>
