--- a/src/app/common-ui/navibar/navibar.component.scss
+++ b/src/app/common-ui/navibar/navibar.component.scss
@@ -2,7 +2,10 @@
     background-color: var(--dark-gray-color);
     height: 50px;
 }
-
+.h3{
+    padding-top: 10px;
+    font-size: 20px;
+}
 a{
     text-decoration: none;
     color: white;
