--- a/src/app/pages/character-detail/character-detail.component.scss
+++ b/src/app/pages/character-detail/character-detail.component.scss
@@ -13,6 +13,7 @@
 
 .one-character-card-avatar{
     border-radius: 10%;
+    
 }
 
 .episodes-card{
@@ -23,7 +24,7 @@
 
 .character-description{
     text-align: left;
-    //background-color: transparent;
+    text-shadow: 0px 5px 5px var(--transparent-dark-color);
 }
 
 .gender-img{
