--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,17 +4,17 @@
     margin-top: 10px;
     padding: 20px;
     width: 100%;
-    backdrop-filter: blur(25px);
+    backdrop-filter: blur(30px);
+    text-align: center;
 }
 
 .characters-card:hover{
     cursor: pointer;
-    background: var(--transparent-dark-color)
+    background: var(--transparent-dark-color);
 }
 
 .characters-card-avatar{
-    width: 100px;
-    height: 100px;
+    width: 150px;
     border-radius: 10%;
     overflow: hidden;
     box-shadow: 0px 4px 9px var(--transparent-dark-color)
@@ -25,11 +25,12 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     padding: 10px;
+    text-shadow: 0px 5px 5px var(--transparent-dark-color);
 }
 
 .search-bar{
     border-radius: 10px;
-    border: none;
+    border: 1px solid var(--dark-gray-color);
     padding: 15px;
     font-size: 15px;
     font-family: Geologica-Reg;
